--- a/index.html
+++ b/index.html
@@ -98,7 +98,21 @@
             </ul>
         </div>
     </div>
-
+    <!-- start -->
+    <div class="start">
+        <div class="fill"></div>
+        <div class="start_body">
+            <h1>
+                Chào mừng bạn đến với T1 Esports
+            </h1>
+            <blockquote>
+                Khám phá thêm nhiều thông tin hữu ích giúp bạn nâng cao kỹ năng và trải nghiệm tuyệt vời nhất
+            </blockquote>
+            <button class="text-white">
+                Bắt đầu ngay
+            </button>
+        </div>
+    </div>
 
 
     <!-- carousel -->
@@ -209,9 +223,9 @@
                 <div class="items">
 
                     <div class="item">
-                        <div class="item_image">
+                        <a class="item_image">
                             <img src="assets/image/pro-1.webp" alt="">
-                        </div>
+                        </a>
                         <h3>2024 T1 Worlds Uniform Jacket</h3>
                         <h4>
                             <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -223,13 +237,13 @@
 
                         </h4>
                         <a class="text-white btn_primary" href="contact.html">
-                            Mua ngay
+                            Thêm <i class="fa-solid fa-cart-shopping"></i>
                         </a>
                     </div>
                     <div class="item">
-                        <div class="item_image">
+                        <a class="item_image">
                             <img src="assets/image/pro-2.webp" alt="">
-                        </div>
+                        </a>
                         <h3>2024 T1 Worlds Uniform Jacket</h3>
                         <h4>
                             <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -241,13 +255,13 @@
 
                         </h4>
                         <a class="text-white btn_primary" href="contact.html">
-                            Mua ngay
+                            Thêm <i class="fa-solid fa-cart-shopping"></i>
                         </a>
                     </div>
                     <div class="item">
-                        <div class="item_image">
+                        <a class="item_image">
                             <img src="assets/image/pro-3.webp" alt="">
-                        </div>
+                        </a>
                         <h3>2024 T1 Worlds Uniform Jacket</h3>
                         <h4>
                             <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -259,13 +273,13 @@
 
                         </h4>
                         <a class="text-white btn_primary" href="contact.html">
-                            Mua ngay
+                            Thêm <i class="fa-solid fa-cart-shopping"></i>
                         </a>
                     </div>
                     <div class="item">
-                        <div class="item_image">
+                        <a class="item_image">
                             <img src="assets/image/pro-4.webp" alt="">
-                        </div>
+                        </a>
                         <h3>2024 T1 Worlds Uniform Jersey</h3>
                         <h4>
                             <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -277,7 +291,7 @@
 
                         </h4>
                         <a class="text-white btn_primary" href="contact.html">
-                            Mua ngay
+                            Thêm <i class="fa-solid fa-cart-shopping"></i>
                         </a>
                     </div>
                 </div>
