--- a/product.html
+++ b/product.html
@@ -110,16 +110,15 @@
                     <button onclick="filter('dln')">Đồ lưu niệm</button>
                 </div>
 
-
                 <div class="filter_search">
                     <input type="text" placeholder="Tìm kiếm" class="form-control">
                 </div>
             </div>
             <div class="content_box">
                 <div class="item" data-category="2024">
-                    <div class="item_image">
+                    <a class="item_image" href="product_detail.html">
                         <img src="assets/image/pro-1.webp" alt="">
-                    </div>
+                    </a>
                     <h3>2024 T1 Worlds Uniform Jacket</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -131,13 +130,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="2024">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-2.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>2024 T1 Worlds Uniform Jersey</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -149,13 +148,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="2024">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-3.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>2024 T1 World Champions Plushie Uniform Set</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -167,13 +166,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="2024">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-4.png" alt="">
-                    </div>
+                    </a>
                     <h3>2024 T1 World Champions ZOFGK Keycap</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -185,13 +184,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="2024">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-5.png" alt="">
-                    </div>
+                    </a>
                     <h3>2024 T1 World Champions Ball Cap</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -203,13 +202,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="2023">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-6.png" alt="">
-                    </div>
+                    </a>
                     <h3>T1 Logo Badge - V5 Champions Edition</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -221,13 +220,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="2023">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-7.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>2023 World Champions T1 Desk Mat Ver.2</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -239,13 +238,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="2023">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-8.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>
                         2023 World Champions T1 Desk Mat Ver.1
                     </h3>
@@ -259,13 +258,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="pk">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-9.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>
                         2024 T1 MSI T-Shirt Chengdu Edition - Navy</h3>
                     <h4>
@@ -278,13 +277,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="pk">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-10.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>
                         2024 T1 MSI T-Shirt Chengdu Edition - White</h3>
                     <h4>
@@ -297,13 +296,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="dln">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-11.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>T1 Player Mini Figure</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -315,13 +314,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="dln">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-12.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>T1 20th Anniv. Faker Keychain</h3>
                     <h4>
                         <div class="original" style="margin-right: 15px;text-decoration: line-through;">
@@ -333,13 +332,13 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="dln">
-                    <div class="item_image">
+                    <a class="item_image">
                         <img src="assets/image/fil-13.jpg" alt="">
-                    </div>
+                    </a>
                     <h3>
                         T1 20th Anniv. BoxeR Keychain</h3>
                     <h4>
@@ -352,7 +351,7 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
                 <div class="item" data-category="dln">
@@ -371,7 +370,7 @@
 
                     </h4>
                     <a class="text-white btn_primary" href="contact.html">
-                        Mua ngay
+                        Thêm <i class="fa-solid fa-cart-shopping"></i>
                     </a>
                 </div>
             </div>
@@ -423,6 +422,7 @@
     <!-- my js -->
     <script src="assets/js/header.js"></script>
     <script src="assets/js/product.js"></script>
+
 </body>
 
 </html>
