--- a/product_detail.html
+++ b/product_detail.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body style="background: #f0f1f5;">
     <!-- header -->
     <div class="header">
         <div class="header_logo">
@@ -96,13 +96,448 @@
         </div>
     </div>
 
-    <!-- main -->
-    <div class="main">
+    <!-- order -->
+    <div class="order">
         <div class="container">
+            <div class="wrapper">
+                <div class="left">
+                    <img src="assets/image/fil-2.jpg" alt="">
+                </div>
+                <div class="right">
+                    <div class="right_name">
+                        2024 T1 Worlds Uniform Jersey
+                    </div>
+                    <div class="right_rating">
+                        <span>
+                            4.7
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                        <span>
+                            7k Đánh giá
+                        </span>
+                    </div>
 
+                    <div class="right_price">
+                        <h3>699.999đ</h3>
+                        <h4>3.960.194đ </h4>
+                    </div>
+                    <div class="right_warranty">
+                        <span>Chính sách trả hàng:</span>
+                        <span>Trả hàng 15 ngày</span>
+                        <span>Trả hàng miễn phí</span>
+                    </div>
+                    <div class="right_delivery">
+                        <span>Vận chuyển:</span>
+                        <span>
+                            <i class="fa-solid fa-truck"></i>
+                            Miễn phí vận chuyển
+                        </span>
+                    </div>
+                    <div class="right_size">
+                        <div>Size:</div>
+                        <button>
+                            M
+                        </button>
+                        <button>
+                            L
+                        </button>
+                        <button>
+                            XL
+                        </button>
+                        <button>
+                            2XL
+                        </button>
+                    </div>
+                    <div class="right_quantity">
+                        <div>Số lượng</div>
+                        <div class="control">
+                            <i class="fa-solid fa-minus"></i>
+                            <input type="number" value="1">
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                    </div>
+                    <div class="right_btn">
+                        <button class="right_btn_cart btn_primary">
+                            Thêm vào giỏ hàng
+                        </button>
+                        <button class="right_btn_buy btn_primary">
+                            Mua ngay
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
+    <!-- detail -->
+    <div class="detail">
+        <div class="container">
+            <div class="wrapper">
+                <h2>Chi tiết sản phẩm</h2>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                Xuất xứ
+                            </td>
+                            <td>
+                                Việt Nam
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Cổ áo
+                            </td>
+                            <td>
+                                Cổ tròn
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Chất liệu
+                            </td>
+                            <td>
+                                Cotton
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Dịp
+                            </td>
+                            <td>
+                                Hằng Ngày
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Cropped Top
+                            </td>
+                            <td>
+                                Không
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Gửi từ
+                            </td>
+                            <td>
+                                Hà Nội
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h2>Mô tả sản phẩm</h2>
+                <div class="detail_desc">
+                    <p>
+                        + Chất co giãn thoải mái, đậm nữ tính
+                        <br>
+                        From:<br>
+                        + Có đủ 4 size M, L, XL, 2XL
+                        <br>
+                        + Thiết kế với màu như ảnh:<br>
+                        Các sp của shop đa số đều có đăng kèm ảnh thật
+                        <br>
+                        + Chất liệu sản phẩm:
+                        <br>
+                        + Khi đặt hàng các bạn đọc kỹ thông tin sp và đặt đơn với đúng màu và số lượng để tránh gửi hàng
+                        nhầm lẫn.
+                        <br>
+                        + Shop không nhận đặt màu qua lưu ý và ib mong các bạn thông cảm.
+                        <br>
+                        - [ ] CAM KẾT
+                        <br>
+                        + Hoàn tiền ngay nếu sản phẩm không giống với mô tả
+                        <br>
+                        + Giao hàng toàn quốc, nhận thanh toán
+                        <br>
+                        + Hỗ trợ đổi trả theo quy định
+                        <br>
+                    </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- vote -->
+    <div class="vote">
+        <div class="container">
+            <div class="wrapper">
+                <h2>Đánh giá sản phẩm</h2>
+                <div class="vote_filter">
+                    <div class="vote_filter_left">
+                        <h2>4.7
+                            <span>trên 5</span>
+                        </h2>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="vote_filter_right">
+                        <button onclick="filter('all')">
+                            Tất cả
+                        </button>
+                        <button onclick="filter('5s')">
+                            5 sao
+                        </button>
+                        <button onclick="filter('4s')">
+                            4 sao
+                        </button>
+                        <button onclick="filter('3s')">
+                            3 sao
+                        </button>
+                        <button onclick="filter('2s')">
+                            2 sao
+                        </button>
+                        <button onclick="filter('1s')">
+                            1 sao
+                        </button>
+                    </div>
+                </div>
+
+                <div class="vote_user" data-filter="5s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/jack.jpg" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            phuong tuan
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            2023-06-01 08:55
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="5s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/sp.jpg" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            So paiderman
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            2023-06-01 08:55
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="5s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/st.webp" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            Son tung MTP
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            2023-06-01 13:55
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="5s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/doran.webp" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            do lan
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            2023-06-01 08:55
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="5s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/koma.webp" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            koma
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            2023-06-01 12:00
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="4s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/user.avif" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            Tien pham
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+
+                        </div>
+                        <div>
+                            2023-06-01 12:00
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="4s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/user.avif" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            Ha Noi
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            2023-06-01 12:00
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="4s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/user.avif" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            My Tho
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            2023-06-01 12:00
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="3s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/user.avif" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            koma
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+
+                        </div>
+                        <div>
+                            2023-06-01 12:00
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+                <div class="vote_user" data-filter="2s">
+                    <div class="vote_user_left">
+                        <img src="assets/image/user.avif" alt="">
+                    </div>
+                    <div class="vote_user_right">
+                        <div>
+                            Nguyen Anh
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div>
+                            2023-06-01 12:00
+                            <br>
+                            chất liệu: mát <br>
+                            Đúng với mô tả: đúng <br>
+                            Giao hàng nhanh đóng hàng cẩn thận
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- footer -->
     <div class="footer">
         <div class="container">
@@ -142,6 +577,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- mys js -->
+    <script src="assets/js/header.js"></script>
+    <script src="assets/js/product_detail.js"></script>
 </body>
 
 </html>
