--- a/login.html
+++ b/login.html
@@ -16,13 +16,13 @@
             <h2>Đăng nhập</h2>
             <form action="#" method="POST">
                 <div class="form-group">
-                    <label for="login-email">Email</label>
-                    <input type="email" id="login-email" name="email" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
                     <span class="form-message"></span>
                 </div>
                 <div class="form-group">
-                    <label for="login-password">Mật khẩu</label>
-                    <input type="password" id="login-password" name="password" required>
+                    <label for="password">Mật khẩu</label>
+                    <input type="password" id="password" name="password" required>
                     <span class="form-message"></span>
                 </div>
                 <button type="submit" class="btn">Đăng nhập</button>
@@ -33,6 +33,19 @@
         </div>
     </div>
 
+    <script src="assets/js/validator.js"></script>
+    <script>
+        var option = {
+            form_id: '#login-section',
+            rules: [
+                validator.isEmail('#email'),
+                validator.isRequired('#password', 'mật khẩu')
+            ]
+        }
+        validator(option)
+
+
+    </script>
 </body>
 
 </html>
