--- a/register.html
+++ b/register.html
@@ -16,28 +16,43 @@
             <form action="#" method="POST">
                 <div class="form-group">
                     <label for="register-name">Họ và Tên</label>
-                    <input type="text" id="register-name" name="name" required>
+                    <input type="text" id="name" name="name" required>
                     <span class="form-message"></span>
                 </div>
                 <div class="form-group">
                     <label for="register-email">Email</label>
-                    <input type="email" id="register-email" name="email" required>
+                    <input type="email" id="email" name="email" required>
                     <span class="form-message"></span>
                 </div>
                 <div class="form-group">
                     <label for="register-password">Mật khẩu</label>
-                    <input type="password" id="register-password" name="password" required>
+                    <input type="password" id="password" name="password" required>
                     <span class="form-message"></span>
                 </div>
                 <div class="form-group">
                     <label for="register-confirm-password">Nhập lại mật khẩu</label>
-                    <input type="password" id="register-confirm-password" name="confirm-password" required>
+                    <input type="password" id="confirmPassword" name="confirm-password" required>
                     <span class="form-message"></span>
                 </div>
-                <button type="submit" class="btn">Đăng kí</button>
+                <button type="submit" class="btn" onclick="">Đăng kí</button>
                 <div class="switch-form">
                     <a href="login.html">Bạn đã có tài khoản? đăng nhập</a>
                 </div>
             </form>
         </div>
     </div>
+    <script src="assets/js/validator.js"></script>
+
+    <script>
+        var option = {
+            form_id: '#register-section',
+            rules: [
+                validator.isRequired('#name', 'Họ tên'),
+                validator.isEmail('#email', 'Email'),
+                validator.isRequired('#password', 'mật khẩu'),
+                validator.checkPasswordConfirm('#confirmPassword')
+            ]
+        }
+        validator(option)
+    </script>
+</body>
